--- a/MagicProject/package.json
+++ b/MagicProject/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.6.3",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql2": "^3.7.0"
   }
 }
